Added Alex files

--- a/ufo_NASA_datetime.ipynb
+++ b/ufo_NASA_datetime.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "46f5e7a9",
+   "execution_count": 2,
+   "id": "2259fd0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28f506f7",
+   "id": "2599245c",
    "metadata": {},
    "source": [
     "# UFO and NASA Data \n",
@@ -26,15 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "6918a0f0",
+   "execution_count": 3,
+   "id": "bd166b26",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\hfatt\\anaconda3\\envs\\Pythondata\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3186: DtypeWarning: Columns (5,9) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Alex\\anaconda3\\envs\\PythonData\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3186: DtypeWarning: Columns (5,9) have mixed types.Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n"
      ]
     },
@@ -164,7 +164,7 @@
        "4                                0.160  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,8 +177,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6db1c84e",
+   "execution_count": 4,
+   "id": "3eddcc45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,8 +187,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "79c1e420",
+   "execution_count": 5,
+   "id": "7952f84a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,8 +197,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "3fd6d667",
+   "execution_count": 6,
+   "id": "8d7c3bdd",
    "metadata": {
     "scrolled": true
    },
@@ -453,7 +453,7 @@
        "[694 rows x 11 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a06a088",
+   "id": "bdbdd1ff",
    "metadata": {},
    "source": [
     "# U.S. Census Data\n",
@@ -474,8 +474,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "910bcd54",
+   "execution_count": 7,
+   "id": "7c909e4a",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
        "4                                            216,051   "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,8 +630,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "10880f99",
+   "execution_count": 8,
+   "id": "829cc75d",
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
        "[399 rows x 10 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,8 +897,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "3558a140",
+   "execution_count": 9,
+   "id": "17505d1e",
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1053,7 @@
        "[77 rows x 5 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78a2edc1",
+   "id": "42d98204",
    "metadata": {},
    "source": [
     "az_census = us_census[us_census[\"Name\"] == \"Arizona\"]\n",
@@ -1093,8 +1093,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "16408bd0",
+   "execution_count": 10,
+   "id": "01fedae9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52326cae",
+   "id": "0a0d7db4",
    "metadata": {},
    "source": [
     "# UFO Data\n",
@@ -1114,27 +1114,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "703dd5da",
+   "execution_count": 11,
+   "id": "dad5f5e5",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\hfatt\\anaconda3\\envs\\Pythondata\\lib\\site-packages\\ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\Alex\\anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  \n",
-      "C:\\Users\\hfatt\\anaconda3\\envs\\Pythondata\\lib\\site-packages\\ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\Alex\\anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  \n",
-      "C:\\Users\\hfatt\\anaconda3\\envs\\Pythondata\\lib\\site-packages\\ipykernel_launcher.py:14: SettingWithCopyWarning: \n",
+      "C:\\Users\\Alex\\anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1162,8 +1162,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "1d148ef9",
+   "execution_count": 12,
+   "id": "e6a72ef5",
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
        "[62994 rows x 13 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1439,8 +1439,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "25d843f3",
+   "execution_count": 13,
+   "id": "ad5e980b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1456,8 +1456,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "aee07b0e",
+   "execution_count": 14,
+   "id": "9a81aace",
    "metadata": {
     "scrolled": true
    },
@@ -1699,7 +1699,7 @@
        "[34988 rows x 11 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1715,7 +1715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38c334ae",
+   "id": "15d54cad",
    "metadata": {},
    "source": [
     "# Merging UFO and State Census Data"
@@ -1723,8 +1723,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "4429a8b0",
+   "execution_count": 15,
+   "id": "3b6ab862",
    "metadata": {},
    "outputs": [
     {
@@ -2013,7 +2013,7 @@
        "[34988 rows x 14 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2026,8 +2026,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "7ea28b44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ufo_statepop_df.to_csv(\"../ufopop.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "dfbd1e08",
+   "id": "2d48b61c",
    "metadata": {},
    "outputs": [],
    "source": []
